argocd-minikube/resources/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: ralfueberfuhr/spring-petclinic-rest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
