argocd-minikube/resources/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic-service
  namespace: petclinic
spec:
  type: NodePort
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8080
  selector:
    app: petclinic
