argocd-minikube/resources/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic
spec:
  rules:
    - host: petclinic.devnation
      http:
        paths:
          - path: /petclinic
            pathType: Prefix
            backend:
              service:
                name: petclinic-service
                port:
                  number: 8888
